--- a/config/database.yml
+++ b/config/database.yml
@@ -23,16 +23,16 @@ default: &default
 
 development:
   <<: *default
-  database: rails_blog_app_development
+  database: rails_blog_app
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: rails_blog_app
+  username: postgres
 
   # The password associated with the postgres role (username).
-  #password:
+  password: postgres#13579
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
