--- a/config/database.yml
+++ b/config/database.yml
@@ -57,7 +57,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_blog_app_test
+  database: rails_blog_app
+  username: postgres
+  password: postgres#13579
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: rails_blog_app_production
-  username: rails_blog_app
-  password: <%= ENV["RAILS_BLOG_APP_DATABASE_PASSWORD"] %>
+  database: rails_blog_app 
+  username: postgres
+  password: postgres#13579
