--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,7 @@ development:
   username: postgres
 
   # The password associated with the postgres role (username).
-  password: 243243
+  password: postgres#13579
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -59,7 +59,7 @@ test:
   <<: *default
   database: rails_blog_app
   username: postgres
-  password: 243243
+  password: postgres#13579
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -85,4 +85,5 @@ production:
   <<: *default
   database: rails_blog_app
   username: postgres
-  password: 243243
+  password: postgres#13579
+  
